my-test/testsuite_scan/ir/SingleSource/Regression/C/gcc-c-torture/execute/alias-4.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/alias-4.c:6:1: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
    6 | main (int argc)
      | ^
      | int
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/alias-4.c:6:1: warning: only one parameter on 'main' declaration [-Wmain]
1 warning and 1 error generated.
